Abstract obstacles complete