@@ -1,3 +1,8 @@
 ## Color Switch AP Project
 
 Implement the Endless Classic Mode of the hit mobile game Color Switch.
+
+--module-path
+"C:\Users\Nandika\Desktop\openjfx-15.0.1_windows-x64_bin-sdk\javafx-sdk-15.0.1\lib"
+--add-modules
+javafx.controls,javafx.fxml
